2003-04-26  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.exp (prune_read_warnings): Rename to
	prune_readelf_wi_warnings.
        (readelf_wi_test): New proc: Test 'readelf -wi' by grepping
        through its output.
        Replace invocation of "readelf_test -wi" with "readelf_wi_test"
	* binutils-all/readelf.wi: Delete.
	
2003-04-23  Nick Clifton  <nickc@redhat.com>

	* binutils-all/readelf.exp (proc prune_readelf_warnings): New
	function.
	(proc readelf_test): Prune warning messages.
	(readelf_test -wi): Add more expected failures.
	* binutils-all/readelf.wi: Severly reduce expected output.
	* binutils-all/testprog.c (string): Explicitly use unsigned
	chars.
	(stdio.h, string.h): Remove inclusion.

2003-04-23  J"orn Rennecke <joern.rennecke@superh.com>

	* binutils-all/readelf.wi: Update.

2003-04-22  Dimitrie O. Paun  <dpaun@rogers.com>

	* binutils-all/windres/windres.exp: Add test for the new -J
	option.  Remove use of -I as it now generates a warning message.

2003-04-03  Nick Clifton  <nickc@redhat.com>

	* binutils-all/windres/dialogid.rc: Replace "Static" with
	"classname" so that compilation will match behaviour of the
	Windows resource compiler.

2003-03-31  Nick Clifton  <nickc@redhat.com>

	* binutils-all/windres/dialogid.rc: New test source file.
	* binutils-all/windres/dialogid.rsd: New test expected results.	

2002-11-07  Casper S. Hornstrup  <chorns@users.sourceforge.net>

	* binutils-all/dlltool.exp: New file for testing dlltool.
	* binutils-all/fastcall.def: New file for testing fastcall
	exports.
	* config/default.exp: Set DLLTOOL variable.

2002-08-27  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp: Revert last change.

2002-08-26  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objcopy.exp (strip_test): Adjust for "no symbols" on
	stdout.
	(strip_executable): Likewise.

2002-08-13  Alan Modra  <amodra@bigpond.net.au>

	* binutils-all/objdump.exp (cpus_expected): Add fr500, ip2022,
	tic80, tms320c30.