@@ -425,10 +425,17 @@ strip_test_with_saving_a_symbol
 
 # Build a final executable.
 
+if { [istarget *-*-cygwin] } {
+    set test_prog "testprog.exe"
+} else {
+    set test_prog "testprog"
+}
+
 proc copy_setup { } {
     global srcdir
     global subdir
     global gcc_gas_flag
+    global test_prog
     
     set res [build_wrapper testglue.o];
     set flags { debug };
@@ -445,11 +452,11 @@ proc copy_setup { } {
 	    set flags "additional_flags=$i $flags"
 	}
     }
-    if { [target_compile "$srcdir/$subdir/testprog.c $add_libs" tmpdir/testprog executable $flags]  != "" } {
+    if { [target_compile "$srcdir/$subdir/testprog.c $add_libs" tmpdir/$test_prog executable $flags]  != "" } {
 	return 2
     }
 
-    set result [remote_load target tmpdir/testprog];
+    set result [remote_load target tmpdir/$test_prog];
     set status [lindex $result 0];
 
     if { $status != "pass"  } {
@@ -463,12 +470,13 @@ proc copy_setup { } {
 # Test copying an executable.
 
 proc copy_executable { prog flags test1 test2 } {
+    global test_prog
 
     if [is_remote host] {
-	set testfile [remote_download host tmpdir/testprog];
+	set testfile [remote_download host tmpdir/$test_prog];
 	set testcopy copyprog
     } else {
-	set testfile tmpdir/testprog
+	set testfile tmpdir/$test_prog
 	set testcopy tmpdir/copyprog
     }
     remote_file host delete $testcopy;
@@ -485,7 +493,7 @@ proc copy_executable { prog flags test1 test2 } {
 	remote_upload host $testcopy tmpdir/copyprog
     }
 
-    set status [remote_exec build "cmp" "tmpdir/testprog tmpdir/copyprog"]
+    set status [remote_exec build "cmp" "tmpdir/$test_prog tmpdir/copyprog"]
     set exec_output [lindex $status 1];
 
     if [string match "" $exec_output] then {
